--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -338,13 +338,62 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Countries and areas                        0\n",
+       "Latitude                                   0\n",
+       "Longitude                                  0\n",
+       "OOSR_Pre0Primary_Age_Male                  0\n",
+       "OOSR_Pre0Primary_Age_Female                0\n",
+       "OOSR_Primary_Age_Male                      0\n",
+       "OOSR_Primary_Age_Female                    0\n",
+       "OOSR_Lower_Secondary_Age_Male              0\n",
+       "OOSR_Lower_Secondary_Age_Female            0\n",
+       "OOSR_Upper_Secondary_Age_Male              0\n",
+       "OOSR_Upper_Secondary_Age_Female            0\n",
+       "Completion_Rate_Primary_Male               0\n",
+       "Completion_Rate_Primary_Female             0\n",
+       "Completion_Rate_Lower_Secondary_Male       0\n",
+       "Completion_Rate_Lower_Secondary_Female     0\n",
+       "Completion_Rate_Upper_Secondary_Male       0\n",
+       "Completion_Rate_Upper_Secondary_Female     0\n",
+       "Grade_2_3_Proficiency_Reading              0\n",
+       "Grade_2_3_Proficiency_Math                 0\n",
+       "Primary_End_Proficiency_Reading            0\n",
+       "Primary_End_Proficiency_Math               0\n",
+       "Lower_Secondary_End_Proficiency_Reading    0\n",
+       "Lower_Secondary_End_Proficiency_Math       0\n",
+       "Youth_15_24_Literacy_Rate_Male             0\n",
+       "Youth_15_24_Literacy_Rate_Female           0\n",
+       "Birth_Rate                                 0\n",
+       "Gross_Primary_Education_Enrollment         0\n",
+       "Gross_Tertiary_Education_Enrollment        0\n",
+       "Unemployment_Rate                          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.isnull().sum()"
    ]
   }
  ],
